# hcl

./: .gitattributes
h2/: Makefile.am  Makefile.in  configure  configure.ac
h2/cmd/: Makefile.am  Makefile.in  scheme.adb  scheme.gpr.in  slim_stream.adb  slim_stream.ads  storage.adb  storage.ads  stream.adb  stream.ads  wide_stream.adb  wide_stream.ads
h2/include/: h2scm.h
h2/include/h2/: config.h.in  macros.h  types.h
h2/include/h2/cmn/: str-priv.h  str.h  utf16.h  utf8.h
h2/lib/: GNUmakefile.in  Makefile.am  Makefile.in  ascii.awk  ascii.txt  h2-ascii.ads  h2-io-file.adb  h2-io.adb  h2-io.ads  h2-os.adb  h2-os.ads  h2-pool.adb  h2-pool.ads  h2-scheme-bigint.adb  h2-scheme-execute-apply.adb  h2-scheme-execute-evaluate.adb  h2-scheme-execute.adb  h2-scheme-token.adb  h2-scheme-token.ads  h2-scheme.adb  h2-scheme.ads  h2-slim.ads  h2-sysapi.adb  h2-sysapi.ads  h2-utf8.adb  h2-utf8.ads  h2-wide.ads  h2-wide_wide.ads  h2.ads  lib.gpr.in  libh2.gpr.in  test-001.scm  test-002.scm  test-003.scm
h2/lib/cmn/: Makefile.am  Makefile.in  str-cmp.h  str-cpy.h  str-fmc.h  str-len.h  str.c  utf16.c  utf8.c
h2/lib/posix/: h2-io-file-get_default_option.adb  h2-os-file.adb  h2-sysapi-file.adb  sysdef.c
h2/lib/win32/: h2-io-file-get_default_option.adb  h2-os-file.adb  h2-sysdef.ads
hcl/: Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
hcl/lib/: Makefile.am  Makefile.in  bigint.c  cb-impl.c  cb-impl.h  cnode.c  comp.c  comp2.c  debug.c  decode.c  dic.c  err.c  exec.c  fmt-imp.h  fmt.c  gc.c  hcl-c.c  hcl-c.h  hcl-cfg.h.in  hcl-cmn.h  hcl-dos.h  hcl-fmt.h  hcl-json.h  hcl-mac.h  hcl-msw.h  hcl-opt.h  hcl-os2.h  hcl-prv.h  hcl-rbt.h  hcl-s.c  hcl-s.h  hcl-tmr.h  hcl-utl.h  hcl-xma.h  hcl-xutl.h  hcl.c  hcl.h  heap.c  ignite.c  json.c  (+27 more)
hcl/mod/: Makefile.am  Makefile.in  _arr.h  _dic.h  _str.h  _sys.h  arr.c  dic.c  str.c  sys.c
hcl/t/: test-bi.hcl  test-bi.sh
